# sistema_fastapi

./: .coverage  .coverage.AlexCardozo.pid31232.XU4TXcex  .env  .gitignore  database.db  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: users.py
migrations/: env.py
migrations/versions/: 1a42faa56782_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_users.py
