[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Cardozo",email = "secundariaalex123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "tzdata (>=2026.3,<2027.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.20,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "typos (>=1.48.0,<2.0.0)",
    "pytest-random-order (>=1.2.0,<2.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest]
pythonpath = ['.']
addopts = ['-p', 'no:warnings', '--cov=fast_zero', '--cov-context=test', '--cov-branch']

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x -vv'
post_test = 'coverage html --show-contexts'